# Ray-Casting

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  main  main.cpp  raycasting
Vector3d/: Vector3d.cpp  Vector3d.h  main.cpp
blender objects/: shrek.mtl
canvas/: canvas.cpp  canvas.h
light/: light.cpp  light.h
light/ambient/: ambient.cpp  ambient.h
light/directional/: directional.cpp  directional.h
light/point/: point_light.cpp  point_light.h
light/spot/: spot.cpp  spot.h
matrix/: matrix.cpp  matrix.h
scene/: scene.cpp  scene.h
shapes/: shape.cpp  shape.h
shapes/complex/: complex_object.cpp  complex_object.h
shapes/cone/: cone.cpp  cone.h
shapes/cylinder/: cylinder.cpp  cylinder.h
shapes/mesh/: mesh.cpp  mesh.h
shapes/plane/: plane.cpp  plane.h
shapes/sphere/: sphere.cpp  sphere.h
traceray/: traceray.cpp  traceray.h
